--- a/recipes/brios.html
+++ b/recipes/brios.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Briós</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/brios.html">Briós</a>
+        <h1>Briós</h1>
     </body>
 </html>
