Add complete 1st recipe page

--- a/recipes/brios.html
+++ b/recipes/brios.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Briós</title>
-    </head>
-    <body>
-        <h1>Briós</h1>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Briós</title>
+</head>
+
+<body>
+    <h1>Briós</h1>
+
+    <img src="https://i.ytimg.com/vi/rrWLuHK7sAg/maxresdefault.jpg" alt="Fresh golden brioche bread." width="512">
+
+    <h2>Description</h2>
+    <p style="width: 512px;">
+        Brioches are excellent for breakfast because of their slightly sweet flavour.
+        But, making them fresh is the best experience one can have, being a sensation for all senses.
+        Note that making them a day before eating them is not ideal. Still, they maintain taste.
+    </p>
+
+    <h2>Ingredients</h2>
+
+    <ul style="width: 512px;">
+        <li>500g fine flour</li>
+        <li>70g melted butter or margarine</li>
+        <li>100g powdered sugar</li>
+        <li>25g fresh yeast or (powder yeast 7 g)</li>
+        <li>250ml lukewarm milk</li>
+        <li>Two egg yolks</li>
+        <li>One egg for lubrication</li>
+        <li>Pinch of salt</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol style="width: 512px;">
+        <li>Turn on the oven with upper-lower heat 190 degrees.</li>
+        <li>Add flour and sugar to a large bowl. Then mix it.</li>
+        <li>Mix the yeast with a bit of warm milk and flour-sugar mixture.</li>
+        <li>After a few minutes, the yeast mixture should rise. Add it to the bowl with the rest of the milk, butter, and egg yolks.</li>
+        <li>The dough must be kneaded until a homogeneous mass is formed and the dough does not stick to the bowl.</li>
+        <li>Afterwards, take the dough and let it rise for 15 to 20 minutes.</li>
+        <li>Now divide the dough into equal-sized pieces. Roll out these pieces and twist them into a tower.</li>
+        <li>Let the pieces rise for another 15 to 20 minutes.</li>
+        <li>Apply the egg on the dough pieces and put everything into the oven for 20 to 25 minutes.</li>
+    </ol>
+</body>
+
 </html>
