--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Odin Recipes</title>
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/brios.html">Briós</a>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Odin Recipes</title>
+</head>
+
+<body>
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/brios.html">Briós</a></li>
+        <li><a href="recipes/white_bread.html">White Bread</a></li>
+    </ul>
+</body>
+
 </html>
