--- a/recipes/white_bread.html
+++ b/recipes/white_bread.html
@@ -9,18 +9,36 @@
 <body>
     <h1>White Bread</h1>
 
-    <img src="" alt="" width="512">
+    <img src="https://img.chefkoch-cdn.de/rezepte/19041004878652/bilder/1408889/crop-960x640/kastenweissbrot.jpg"
+        alt="A white bread cut open." width="512">
 
     <h2>Description</h2>
     <p style="width: 512px;">
+        White bread is a simple recipe and fantastic for beginners.
+        It demonstrates how easy it is to make one's bread better than supermarket bread.
+        Probably, the first tries will be difficult, but with a bit of practise, you can make it perfect.
+        You can find the original recipe <a
+            href="https://www.chefkoch.de/rezepte/19041004878652/Kastenweissbrot.html">here</a>.
     </p>
 
     <h2>Ingredients</h2>
     <ul style="width: 512px;">
+        <li>40 g yeast</li>
+        <li>1 tbsp sugar</li>
+        <li>300 ml milk, lukewarm</li>
+        <li>40 g butter</li>
+        <li>1 tbsp salt</li>
+        <li>500 g flour</li>
     </ul>
 
     <h2>Steps</h2>
     <ol style="width: 512px;">
+        <li>Turn on the oven with upper-lower heat 200 degrees.</li>
+        <li>Mix the yeast with sugar, flour and milk. Let it rise for a few minutes.</li>
+        <li>Add all ingredients and the previous mixture to a bowl.</li>
+        <li>Knead and let rise for approx. 40 - 50 min.</li>
+        <li>Afterwards, knead the dough again. Then put in a loaf pan and let rise again for 20 minutes.</li>
+        <li>Apply a little bit of water to the top of the dough and put it into the oven for 40 to 50 minutes.</li>
     </ol>
 
 </body>
