Fix missing link to the new page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="recipes/brios.html">Briós</a></li>
         <li><a href="recipes/white_bread.html">White Bread</a></li>
+        <li><a href="recipes/langos.html">Lángos</a></li>
     </ul>
 </body>
 
