Add complete 3rd recipe page

--- a/recipes/langos.html
+++ b/recipes/langos.html
@@ -9,18 +9,32 @@
 <body>
     <h1>Lángos</h1>
 
-    <img src="" alt="" width="512">
+    <img src="https://img.chefkoch-cdn.de/rezepte/962401201795317/bilder/846378/crop-960x640/langos.jpg"
+        alt="A langos with cheese topping." width="512">
 
     <h2>Description</h2>
     <p style="width: 512px;">
+        Lángos is a lovely traditional Hungarian dish.
+        You can eat it with every imaginable topping; however, it tastes best with food similar to cheese because the
+        dough is "quite salty".
+        You can find the original recipe <a href="https://www.chefkoch.de/rezepte/962401201795317/Langos.html">here</a>.
     </p>
 
     <h2>Ingredients</h2>
     <ul style="width: 512px;">
+        <li>500 g flour</li>
+        <li>7 g dry yeast</li>
+        <li>1 tbsp salt</li>
+        <li>400 ml water, lukewarm</li>
     </ul>
 
     <h2>Steps</h2>
     <ol style="width: 512px;">
+        <li>Put all ingredients in a bowl and mix until a smooth dough is formed.</li>
+        <li>Afterwards, cover the bowl and place it in a warm area for about 25 minutes.</li>
+        <li>Pull apart fist-sized pieces of dough the size of a plate.</li>
+        <li>Add oil to a pan and put the Lángos into the hot oil.</li>
+        <li>After a minute, change the side to get a golden brown crust.</li>
     </ol>
 
 </body>
