Add link back to the homepage

--- a/recipes/langos.html
+++ b/recipes/langos.html
@@ -37,6 +37,8 @@
         <li>After a minute, change the side to get a golden brown crust.</li>
     </ol>
 
+    <a href="../index.html">Back</a>
+
 </body>
 
 </html>
