--- a/recipes/white_bread.html
+++ b/recipes/white_bread.html
@@ -41,6 +41,8 @@
         <li>Apply a little bit of water to the top of the dough and put it into the oven for 40 to 50 minutes.</li>
     </ol>
 
+    <a href="../index.html">Back</a>
+
 </body>
 
 </html>
