--- a/recipes/brios.html
+++ b/recipes/brios.html
@@ -16,8 +16,7 @@
         Brioches are excellent for breakfast because of their slightly sweet flavour.
         But, making them fresh is the best experience one can have, being a sensation for all senses.
         Note that making them a day before eating them is not ideal. Still, they maintain taste.
-        You can find the original recipe <a
-            href="https://www.youtube.com/watch?v=rrWLuHK7sAg">here</a>.
+        You can find the original recipe <a href="https://www.youtube.com/watch?v=rrWLuHK7sAg">here</a>.
     </p>
 
     <h2>Ingredients</h2>
@@ -38,13 +37,17 @@
         <li>Turn on the oven with upper-lower heat 190 degrees.</li>
         <li>Add flour and sugar to a large bowl. Then mix it.</li>
         <li>Mix the yeast with a bit of warm milk and flour-sugar mixture.</li>
-        <li>After a few minutes, the yeast mixture should rise. Add it to the bowl with the rest of the milk, butter, and egg yolks.</li>
+        <li>After a few minutes, the yeast mixture should rise. Add it to the bowl with the rest of the milk, butter,
+            and egg yolks.</li>
         <li>The dough must be kneaded until a homogeneous mass is formed and the dough does not stick to the bowl.</li>
         <li>Afterwards, take the dough and let it rise for 15 to 20 minutes.</li>
         <li>Now divide the dough into equal-sized pieces. Roll out these pieces and twist them into a tower.</li>
         <li>Let the pieces rise for another 15 to 20 minutes.</li>
         <li>Apply the egg on the dough pieces and put everything into the oven for 20 to 25 minutes.</li>
     </ol>
+
+    <a href="../index.html">Back</a>
+
 </body>
 
 </html>
