Add images to local

--- a/recipes/brios.html
+++ b/recipes/brios.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Briós</h1>
 
-    <img src="https://i.ytimg.com/vi/rrWLuHK7sAg/maxresdefault.jpg" alt="Fresh golden brioche bread." width="512">
+    <img src="../images/brioche.jpg" alt="Fresh golden brioche bread." width="512">
 
     <h2>Description</h2>
     <p style="width: 512px;">
