--- a/recipes/langos.html
+++ b/recipes/langos.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Lángos</h1>
 
-    <img src="https://img.chefkoch-cdn.de/rezepte/962401201795317/bilder/846378/crop-960x640/langos.jpg"
+    <img src="../images/langos.jpg"
         alt="A langos with cheese topping." width="512">
 
     <h2>Description</h2>
