--- a/recipes/white_bread.html
+++ b/recipes/white_bread.html
@@ -9,8 +9,7 @@
 <body>
     <h1>White Bread</h1>
 
-    <img src="https://img.chefkoch-cdn.de/rezepte/19041004878652/bilder/1408889/crop-960x640/kastenweissbrot.jpg"
-        alt="A white bread cut open." width="512">
+    <img src="../images/white_bread.jpg" alt="A white bread cut open." width="512">
 
     <h2>Description</h2>
     <p style="width: 512px;">
