--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>Bakery Recipes</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Bakery Recipes</h1>
+
+    <img src="./images/home-bakery.jpeg" alt="Ingredients for bakery products" width="512">
+
     <ul>
         <li><a href="recipes/brios.html">Briós</a></li>
         <li><a href="recipes/white_bread.html">White Bread</a></li>
