Add link to repository

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     </ul>
 </body>
 
-<!-- TODO: Visit the <a href="https://www.google.com">repository</a> to see the project. -->
+Visit the <a href="https://github.com/jctemp/website-recipes">repository</a> to see the project.
 
 </html>
