--- a/recipes/langos.html
+++ b/recipes/langos.html
@@ -9,8 +9,7 @@
 <body>
     <h1>Lángos</h1>
 
-    <img src="../images/langos.jpg"
-        alt="A langos with cheese topping." width="512">
+    <img src="../images/langos.jpg" alt="A langos with cheese topping." width="512">
 
     <h2>Description</h2>
     <p style="width: 512px;">
