Add basic css styling

--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Bakery Recipes</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>Bakery Recipes</h1>
+    <h1 class="heading">Bakery Recipes</h1>
 
     <img src="./images/home-bakery.jpeg" alt="Ingredients for bakery products" width="512">
 
-    <ul>
-        <li><a href="recipes/brios.html">Briós</a></li>
-        <li><a href="recipes/white_bread.html">White Bread</a></li>
-        <li><a href="recipes/langos.html">Lángos</a></li>
-    </ul>
-</body>
+    <nav>
+        <a href="recipes/brios.html">Briós</a>
+        <a href="recipes/white_bread.html">White Bread</a>
+        <a href="recipes/langos.html">Lángos</a>
+    </nav>
 
-Visit the <a href="https://github.com/jctemp/website-recipes">repository</a> to see the project.
+    Visit the <a href="https://github.com/jctemp/website-recipes">repository</a> to see the project.
+
+</body>
 
 </html>
