--- a/recipes/brios.html
+++ b/recipes/brios.html
@@ -4,24 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Briós</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h1>Briós</h1>
+    <h1 class="heading">Briós</h1>
 
-    <img src="../images/brioche.jpg" alt="Fresh golden brioche bread." width="512">
+    <img src="../images/brioche.jpg" alt="Fresh golden brioche bread.">
 
-    <h2>Description</h2>
-    <p style="width: 512px;">
+    <h2 class="heading">Description</h2>
+    <p>
         Brioches are excellent for breakfast because of their slightly sweet flavour.
         But, making them fresh is the best experience one can have, being a sensation for all senses.
         Note that making them a day before eating them is not ideal. Still, they maintain taste.
-        You can find the original recipe <a href="https://www.youtube.com/watch?v=rrWLuHK7sAg">here</a>.
+        You can find the original recipe <em><a href="https://www.youtube.com/watch?v=rrWLuHK7sAg">here</a></em>.
     </p>
 
-    <h2>Ingredients</h2>
+    <h2 class="heading">Ingredients</h2>
 
-    <ul style="width: 512px;">
+    <ul>
         <li>500 g fine flour</li>
         <li>70 g melted butter or margarine</li>
         <li>100 g powdered sugar</li>
@@ -32,8 +33,8 @@
         <li>Pinch of salt</li>
     </ul>
 
-    <h2>Steps</h2>
-    <ol style="width: 512px;">
+    <h2 class="heading">Steps</h2>
+    <ol>
         <li>Turn on the oven with upper-lower heat 190 degrees.</li>
         <li>Add flour and sugar to a large bowl. Then mix it.</li>
         <li>Mix the yeast with a bit of warm milk and flour-sugar mixture.</li>
@@ -46,7 +47,9 @@
         <li>Apply the egg on the dough pieces and put everything into the oven for 20 to 25 minutes.</li>
     </ol>
 
-    <a href="../index.html">Back</a>
+    <span class="special">
+        <a href="../index.html" id="back">Back</a>
+    </span>
 
 </body>
 
