--- a/recipes/langos.html
+++ b/recipes/langos.html
@@ -4,31 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Lángos</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h1>Lángos</h1>
+    <h1 class="heading">Lángos</h1>
 
-    <img src="../images/langos.jpg" alt="A langos with cheese topping." width="512">
+    <img src="../images/langos.jpg" alt="A langos with cheese topping.">
 
-    <h2>Description</h2>
-    <p style="width: 512px;">
+    <h2 class="heading">Description</h2>
+    <p>
         Lángos is a lovely traditional Hungarian dish.
         You can eat it with every imaginable topping; however, it tastes best with food similar to cheese because the
         dough is "quite salty".
         You can find the original recipe <a href="https://www.chefkoch.de/rezepte/962401201795317/Langos.html">here</a>.
     </p>
 
-    <h2>Ingredients</h2>
-    <ul style="width: 512px;">
+    <h2 class="heading">Ingredients</h2>
+    <ul>
         <li>500 g flour</li>
         <li>7 g dry yeast</li>
         <li>1 tbsp salt</li>
         <li>400 ml water, lukewarm</li>
     </ul>
 
-    <h2>Steps</h2>
-    <ol style="width: 512px;">
+    <h2 class="heading">Steps</h2>
+    <ol>
         <li>Put all ingredients in a bowl and mix until a smooth dough is formed.</li>
         <li>Afterwards, cover the bowl and place it in a warm area for about 25 minutes.</li>
         <li>Pull apart fist-sized pieces of dough the size of a plate.</li>
@@ -36,7 +37,9 @@
         <li>After a minute, change the side to get a golden brown crust.</li>
     </ol>
 
-    <a href="../index.html">Back</a>
+    <span class="special">
+        <a href="../index.html" id="back">Back</a>
+    </span>
 
 </body>
 
