--- a/recipes/white_bread.html
+++ b/recipes/white_bread.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>White Bread</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h1>White Bread</h1>
+    <h1 class="heading">White Bread</h1>
 
-    <img src="../images/white_bread.jpg" alt="A white bread cut open." width="512">
+    <img src="../images/white_bread.jpg" alt="A white bread cut open.">
 
-    <h2>Description</h2>
-    <p style="width: 512px;">
+    <h2 class="heading">Description</h2>
+    <p>
         White bread is a simple recipe and fantastic for beginners.
         It demonstrates how easy it is to make one's bread better than supermarket bread.
         Probably, the first tries will be difficult, but with a bit of practise, you can make it perfect.
@@ -20,8 +21,8 @@
             href="https://www.chefkoch.de/rezepte/19041004878652/Kastenweissbrot.html">here</a>.
     </p>
 
-    <h2>Ingredients</h2>
-    <ul style="width: 512px;">
+    <h2 class="heading">Ingredients</h2>
+    <ul>
         <li>40 g yeast</li>
         <li>1 tbsp sugar</li>
         <li>300 ml milk, lukewarm</li>
@@ -30,8 +31,8 @@
         <li>500 g flour</li>
     </ul>
 
-    <h2>Steps</h2>
-    <ol style="width: 512px;">
+    <h2 class="heading">Steps</h2>
+    <ol>
         <li>Turn on the oven with upper-lower heat 200 degrees.</li>
         <li>Mix the yeast with sugar, flour and milk. Let it rise for a few minutes.</li>
         <li>Add all ingredients and the previous mixture to a bowl.</li>
@@ -40,7 +41,9 @@
         <li>Apply a little bit of water to the top of the dough and put it into the oven for 40 to 50 minutes.</li>
     </ol>
 
-    <a href="../index.html">Back</a>
+    <span class="special">
+        <a href="../index.html" id="back">Back</a>
+    </span>
 
 </body>
 
