--- a/recipes/brios.html
+++ b/recipes/brios.html
@@ -8,52 +8,62 @@
 
     <title>Briós</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <h1 class="heading">Briós</h1>
+    <div class="container">
+        <header class="secondary normal-pad">
+            <h1 class="heading">Briós</h1>
+        </header>
 
-    <img src="../images/brioche.jpg" alt="Fresh golden brioche bread.">
+        <main class="primary">
+            <img src="../images/brioche.jpg" alt="Fresh golden brioche bread.">
+            <h2 class="heading secondary normal-pad">Description</h2>
+            <p class="large-pad">
+                Brioches are excellent for breakfast because of their slightly sweet flavour.
+                But, making them fresh is the best experience one can have, being a sensation for all senses.
+                Note that making them a day before eating them is not ideal. Still, they maintain taste.
+                You can find the original recipe <em><a
+                        href="https://www.youtube.com/watch?v=rrWLuHK7sAg">here</a></em>.
+            </p>
 
-    <h2 class="heading">Description</h2>
-    <p>
-        Brioches are excellent for breakfast because of their slightly sweet flavour.
-        But, making them fresh is the best experience one can have, being a sensation for all senses.
-        Note that making them a day before eating them is not ideal. Still, they maintain taste.
-        You can find the original recipe <em><a href="https://www.youtube.com/watch?v=rrWLuHK7sAg">here</a></em>.
-    </p>
+            <h2 class="heading secondary normal-pad">Ingredients</h2>
 
-    <h2 class="heading">Ingredients</h2>
+            <ul class="large-pad">
+                <li>500 g fine flour</li>
+                <li>70 g melted butter or margarine</li>
+                <li>100 g powdered sugar</li>
+                <li>25 g fresh yeast or (powder yeast 7 g)</li>
+                <li>250 ml lukewarm milk</li>
+                <li>Two egg yolks</li>
+                <li>One egg for lubrication</li>
+                <li>Pinch of salt</li>
+            </ul>
 
-    <ul>
-        <li>500 g fine flour</li>
-        <li>70 g melted butter or margarine</li>
-        <li>100 g powdered sugar</li>
-        <li>25 g fresh yeast or (powder yeast 7 g)</li>
-        <li>250 ml lukewarm milk</li>
-        <li>Two egg yolks</li>
-        <li>One egg for lubrication</li>
-        <li>Pinch of salt</li>
-    </ul>
+            <h2 class="heading secondary normal-pad">Steps</h2>
+            <ol class="large-pad">
+                <li>Turn on the oven with upper-lower heat 190 degrees.</li>
+                <li>Add flour and sugar to a large bowl. Then mix it.</li>
+                <li>Mix the yeast with a bit of warm milk and flour-sugar mixture.</li>
+                <li>After a few minutes, the yeast mixture should rise. Add it to the bowl with the rest of the milk,
+                    butter,
+                    and egg yolks.</li>
+                <li>The dough must be kneaded until a homogeneous mass is formed and the dough does not stick to the
+                    bowl.</li>
+                <li>Afterwards, take the dough and let it rise for 15 to 20 minutes.</li>
+                <li>Now divide the dough into equal-sized pieces. Roll out these pieces and twist them into a tower.
+                </li>
+                <li>Let the pieces rise for another 15 to 20 minutes.</li>
+                <li>Apply the egg on the dough pieces and put everything into the oven for 20 to 25 minutes.</li>
+            </ol>
+        </main>
 
-    <h2 class="heading">Steps</h2>
-    <ol>
-        <li>Turn on the oven with upper-lower heat 190 degrees.</li>
-        <li>Add flour and sugar to a large bowl. Then mix it.</li>
-        <li>Mix the yeast with a bit of warm milk and flour-sugar mixture.</li>
-        <li>After a few minutes, the yeast mixture should rise. Add it to the bowl with the rest of the milk, butter,
-            and egg yolks.</li>
-        <li>The dough must be kneaded until a homogeneous mass is formed and the dough does not stick to the bowl.</li>
-        <li>Afterwards, take the dough and let it rise for 15 to 20 minutes.</li>
-        <li>Now divide the dough into equal-sized pieces. Roll out these pieces and twist them into a tower.</li>
-        <li>Let the pieces rise for another 15 to 20 minutes.</li>
-        <li>Apply the egg on the dough pieces and put everything into the oven for 20 to 25 minutes.</li>
-    </ol>
-
-    <span class="special">
-        <a href="../index.html" id="back">Back</a>
-    </span>
-
+        <footer class="secondary large-pad">
+            <a href="../index.html" class="secondary link-invert">Back</a>
+            <a href="https://github.com/jctemp/website-recipes" class="fa fa-github fa-2x secondary link-invert"></a>
+        </footer>
+    </div>
 </body>
 
 </html>
