--- a/recipes/white_bread.html
+++ b/recipes/white_bread.html
@@ -8,46 +8,54 @@
 
     <title>White Bread</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <h1 class="heading">White Bread</h1>
+    <div class="container">
+        <header class="secondary normal-pad">
+            <h1 class="heading">White Bread</h1>
+        </header>
 
-    <img src="../images/white_bread.jpg" alt="A white bread cut open.">
+        <main class="primary">
+            <img src="../images/white_bread.jpg" alt="A white bread cut open.">
 
-    <h2 class="heading">Description</h2>
-    <p>
-        White bread is a simple recipe and fantastic for beginners.
-        It demonstrates how easy it is to make one's bread better than supermarket bread.
-        Probably, the first tries will be difficult, but with a bit of practise, you can make it perfect.
-        You can find the original recipe <a
-            href="https://www.chefkoch.de/rezepte/19041004878652/Kastenweissbrot.html">here</a>.
-    </p>
+            <h2 class="heading secondary normal-pad">Description</h2>
+            <p class="large-pad">
+                White bread is a simple recipe and fantastic for beginners.
+                It demonstrates how easy it is to make one's bread better than supermarket bread.
+                Probably, the first tries will be difficult, but with a bit of practise, you can make it perfect.
+                You can find the original recipe <a
+                    href="https://www.chefkoch.de/rezepte/19041004878652/Kastenweissbrot.html">here</a>.
+            </p>
 
-    <h2 class="heading">Ingredients</h2>
-    <ul>
-        <li>40 g yeast</li>
-        <li>1 tbsp sugar</li>
-        <li>300 ml milk, lukewarm</li>
-        <li>40 g butter</li>
-        <li>1 tbsp salt</li>
-        <li>500 g flour</li>
-    </ul>
+            <h2 class="heading secondary normal-pad">Ingredients</h2>
+            <ul class="large-pad">
+                <li>40 g yeast</li>
+                <li>1 tbsp sugar</li>
+                <li>300 ml milk, lukewarm</li>
+                <li>40 g butter</li>
+                <li>1 tbsp salt</li>
+                <li>500 g flour</li>
+            </ul>
 
-    <h2 class="heading">Steps</h2>
-    <ol>
-        <li>Turn on the oven with upper-lower heat 200 degrees.</li>
-        <li>Mix the yeast with sugar, flour and milk. Let it rise for a few minutes.</li>
-        <li>Add all ingredients and the previous mixture to a bowl.</li>
-        <li>Knead and let rise for approx. 40 - 50 min.</li>
-        <li>Afterwards, knead the dough again. Then put in a loaf pan and let rise again for 20 minutes.</li>
-        <li>Apply a little bit of water to the top of the dough and put it into the oven for 40 to 50 minutes.</li>
-    </ol>
+            <h2 class="heading secondary normal-pad">Steps</h2>
+            <ol class="large-pad">
+                <li>Turn on the oven with upper-lower heat 200 degrees.</li>
+                <li>Mix the yeast with sugar, flour and milk. Let it rise for a few minutes.</li>
+                <li>Add all ingredients and the previous mixture to a bowl.</li>
+                <li>Knead and let rise for approx. 40 - 50 min.</li>
+                <li>Afterwards, knead the dough again. Then put in a loaf pan and let rise again for 20 minutes.</li>
+                <li>Apply a little bit of water to the top of the dough and put it into the oven for 40 to 50 minutes.
+                </li>
+            </ol>
+        </main>
 
-    <span class="special">
-        <a href="../index.html" id="back">Back</a>
-    </span>
-
+        <footer class="secondary large-pad">
+            <a href="../index.html" class="secondary link-invert">Back</a>
+            <a href="https://github.com/jctemp/website-recipes" class="fa fa-github fa-2x secondary link-invert"></a>
+        </footer>
+        <div>
 </body>
 
 </html>
