--- a/recipes/langos.html
+++ b/recipes/langos.html
@@ -8,42 +8,52 @@
 
     <title>Lángos</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <h1 class="heading">Lángos</h1>
+    <div class="container">
+        <header class="secondary normal-pad">
+            <h1 class="heading">Lángos</h1>
+        </header>
 
-    <img src="../images/langos.jpg" alt="A langos with cheese topping.">
+        <main class="primary">
+            <img src="../images/langos.jpg" alt="A langos with cheese topping.">
 
-    <h2 class="heading">Description</h2>
-    <p>
-        Lángos is a lovely traditional Hungarian dish.
-        You can eat it with every imaginable topping; however, it tastes best with food similar to cheese because the
-        dough is "quite salty".
-        You can find the original recipe <a href="https://www.chefkoch.de/rezepte/962401201795317/Langos.html">here</a>.
-    </p>
+            <h2 class="heading secondary normal-pad">Description</h2>
+            <p class="large-pad">
+                Lángos is a lovely traditional Hungarian dish.
+                You can eat it with every imaginable topping; however, it tastes best with food similar to cheese
+                because
+                the
+                dough is "quite salty".
+                You can find the original recipe <a
+                    href="https://www.chefkoch.de/rezepte/962401201795317/Langos.html">here</a>.
+            </p>
 
-    <h2 class="heading">Ingredients</h2>
-    <ul>
-        <li>500 g flour</li>
-        <li>7 g dry yeast</li>
-        <li>1 tbsp salt</li>
-        <li>400 ml water, lukewarm</li>
-    </ul>
+            <h2 class="heading secondary normal-pad">Ingredients</h2>
+            <ul class="large-pad">
+                <li>500 g flour</li>
+                <li>7 g dry yeast</li>
+                <li>1 tbsp salt</li>
+                <li>400 ml water, lukewarm</li>
+            </ul>
 
-    <h2 class="heading">Steps</h2>
-    <ol>
-        <li>Put all ingredients in a bowl and mix until a smooth dough is formed.</li>
-        <li>Afterwards, cover the bowl and place it in a warm area for about 25 minutes.</li>
-        <li>Pull apart fist-sized pieces of dough the size of a plate.</li>
-        <li>Add oil to a pan and put the Lángos into the hot oil.</li>
-        <li>After a minute, change the side to get a golden brown crust.</li>
-    </ol>
+            <h2 class="heading secondary normal-pad">Steps</h2>
+            <ol class="large-pad">
+                <li>Put all ingredients in a bowl and mix until a smooth dough is formed.</li>
+                <li>Afterwards, cover the bowl and place it in a warm area for about 25 minutes.</li>
+                <li>Pull apart fist-sized pieces of dough the size of a plate.</li>
+                <li>Add oil to a pan and put the Lángos into the hot oil.</li>
+                <li>After a minute, change the side to get a golden brown crust.</li>
+            </ol>
+        </main>
 
-    <span class="special">
-        <a href="../index.html" id="back">Back</a>
-    </span>
-
+        <footer class="secondary large-pad">
+            <a href="../index.html" class="secondary link-invert">Back</a>
+            <a href="https://github.com/jctemp/website-recipes" class="fa fa-github fa-2x secondary link-invert"></a>
+        </footer>
+    </div>
 </body>
 
 </html>
